--- a/plugins/layout/package.json
+++ b/plugins/layout/package.json
@@ -27,20 +27,13 @@
     "batching-toposort": "^1.2.0"
   },
   "devDependencies": {
-    "babel-loader": "^8.0.6",
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-babel": "^5.2.2",
     "rollup": "^2.36.1",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "css-loader": "^1.0.1",
-    "less": "^3.7.1",
-    "less-loader": "^4.1.0"
+    "rollup-plugin-postcss": "^4.0.2"
   }
 }
