--- a/plugins/layout/package.json
+++ b/plugins/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-plugins-layout",
-  "version": "0.0.21",
+  "version": "0.0.21-beta.6",
   "description": "butterfly-plugins-layout,含有各种布局函数",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
@@ -31,6 +31,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "@rollup/plugin-babel": "^5.2.2",
     "rollup": "^2.36.1",
     "rollup-plugin-commonjs": "^10.1.0",
