--- a/plugins/layout/package.json
+++ b/plugins/layout/package.json
@@ -1,6 +1,6 @@
 {
   "name": "butterfly-plugins-layout",
-  "version": "0.0.21-beta.6",
+  "version": "0.0.22",
   "description": "butterfly-plugins-layout,含有各种布局函数",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
